version/0.17/_sources/api/solver/_autosummary/settings/interfaces.rst.txt
:orphan:

.. _interfaces:

interfaces
==========

.. autoclass:: ansys.fluent.core.solver.settings_232.interfaces.interfaces
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`interfaces_child <interfaces_child>`


.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`physics <physics>`       'physics' child.

========================   ====================

